--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
   "dependencies": {
     "@expo/samples": "2.1.1",
     "expo": "^31.0.2",
+    "firebase": "^5.6.0",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-31.0.0.tar.gz",
+    "react-native-firebase": "^5.1.1",
     "react-native-js-stepper": "^0.2.1",
     "react-native-material-textfield": "^0.12.0",
-    "react-navigation": "^2.18.2"
+    "react-navigation": "^3.0.5",
+    "tcomb-form-native": "^0.6.20"
   },
   "devDependencies": {
     "babel-preset-expo": "^5.0.0",
